--- a/notebooks/anachronism.ipynb
+++ b/notebooks/anachronism.ipynb
@@ -286,10 +286,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "s = structure_prompt(examples=examples, input=input, instruction=instruction)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style type='text/css'>\n",
+       ":root {\n",
+       "  --txt: #000;\n",
+       "  --inserted: rgba(0, 138.56128016, 250.76166089, 0.25);\n",
+       "  --generated: rgba(0, 165, 0, 0.25);\n",
+       "}\n",
+       "@media screen and (prefers-color-scheme: dark) {\n",
+       "  :root {\n",
+       "    --txt: #fff;\n",
+       "  }\n",
+       "}\n",
+       "</style><pre style='margin: 0px; padding: 0px; padding-left: 8px; margin-left: -8px; border-radius: 0px; border-left: 1px solid rgba(127, 127, 127, 0.2); white-space: pre-wrap; font-family: ColfaxAI, Arial; font-size: 15px; line-height: 23px;'><span style='background-color: var(--inserted); display: inline;' title='{{instruction}}'>Given a sentence tell me whether it contains an anachronism (i.e. whether it could have happened or not based on the time periods associated with the entities).</span>\n",
+       "----<span style='opacity: 1.0; display: inline; background-color: var(--inserted);' title='{{#each examples}}\n",
+       "Sentence: {{this.input}}\n",
+       "Entities and dates:{{#each this.entities}}\n",
+       "{{this.entity}}: {{this.time}}{{/each}}\n",
+       "Reasoning: {{this.reasoning}}\n",
+       "Anachronism: {{this.answer}}\n",
+       "{{/each}}'><div style='border-left: 1px dashed rgb(0, 0, 0, .2); border-top: 0px solid rgb(0, 0, 0, .2); margin-right: -4px; display: inline; width: 4px; height: 24px;'></div>\n",
+       "Sentence: <span style='background-color: var(--inserted); display: inline;' title='{{this.input}}'>I wrote about shakespeare</span>\n",
+       "Entities and dates:<span style='opacity: 1.0; display: inline; background-color: var(--inserted);' title='{{#each this.entities}}\n",
+       "{{this.entity}}: {{this.time}}{{/each}}'><div style='border-left: 1px dashed rgb(0, 0, 0, .2); border-top: 0px solid rgb(0, 0, 0, .2); margin-right: -4px; display: inline; width: 4px; height: 24px;'></div>\n",
+       "<span style='background-color: var(--inserted); display: inline;' title='{{this.entity}}'>I</span>: <span style='background-color: var(--inserted); display: inline;' title='{{this.time}}'>present</span><div style='border-left: 1px dashed rgb(0, 0, 0, .2); border-top: 0px solid rgb(0, 0, 0, .2); margin-right: -4px; display: inline; width: 4px; height: 24px;'></div>\n",
+       "<span style='background-color: var(--inserted); display: inline;' title='{{this.entity}}'>Shakespeare</span>: <span style='background-color: var(--inserted); display: inline;' title='{{this.time}}'>16th century</span><div style='border-left: 1px dashed rgb(0, 0, 0, .2); border-top: 0px solid rgb(0, 0, 0, .2); margin-right: -4px; display: inline; width: 4px; height: 24px;'></div></span>\n",
+       "Reasoning: <span style='background-color: var(--inserted); display: inline;' title='{{this.reasoning}}'>I can write about Shakespeare because he lived in the past with respect to me.</span>\n",
+       "Anachronism: <span style='background-color: var(--inserted); display: inline;' title='{{this.answer}}'>No</span>\n",
+       "<div style='border-left: 1px dashed rgb(0, 0, 0, .2); border-top: 0px solid rgb(0, 0, 0, .2); margin-right: -4px; display: inline; width: 4px; height: 24px;'></div>\n",
+       "Sentence: <span style='background-color: var(--inserted); display: inline;' title='{{this.input}}'>Shakespeare wrote about me</span>\n",
+       "Entities and dates:<span style='opacity: 1.0; display: inline; background-color: var(--inserted);' title='{{#each this.entities}}\n",
+       "{{this.entity}}: {{this.time}}{{/each}}'><div style='border-left: 1px dashed rgb(0, 0, 0, .2); border-top: 0px solid rgb(0, 0, 0, .2); margin-right: -4px; display: inline; width: 4px; height: 24px;'></div>\n",
+       "<span style='background-color: var(--inserted); display: inline;' title='{{this.entity}}'>Shakespeare</span>: <span style='background-color: var(--inserted); display: inline;' title='{{this.time}}'>16th century</span><div style='border-left: 1px dashed rgb(0, 0, 0, .2); border-top: 0px solid rgb(0, 0, 0, .2); margin-right: -4px; display: inline; width: 4px; height: 24px;'></div>\n",
+       "<span style='background-color: var(--inserted); display: inline;' title='{{this.entity}}'>I</span>: <span style='background-color: var(--inserted); display: inline;' title='{{this.time}}'>present</span><div style='border-left: 1px dashed rgb(0, 0, 0, .2); border-top: 0px solid rgb(0, 0, 0, .2); margin-right: -4px; display: inline; width: 4px; height: 24px;'></div></span>\n",
+       "Reasoning: <span style='background-color: var(--inserted); display: inline;' title='{{this.reasoning}}'>Shakespeare cannot have written about me, because he died before I was born</span>\n",
+       "Anachronism: <span style='background-color: var(--inserted); display: inline;' title='{{this.answer}}'>Yes</span>\n",
+       "<div style='border-left: 1px dashed rgb(0, 0, 0, .2); border-top: 0px solid rgb(0, 0, 0, .2); margin-right: -4px; display: inline; width: 4px; height: 24px;'></div></span>---\n",
+       "Sentence: <span style='background-color: var(--inserted); display: inline;' title='{{input}}'>Vasco de Gama avoided shipwreck by the Cape of Good Hope thanks to his astrolabe.</span>\n",
+       "Entities and dates:\n",
+       "<span style='background-color: rgba(0, 165, 0, 0.25); opacity: 1.0; display: inline;' title='{{generate &quot;entities&quot;}}'>Vasco de Gama: 15th century\n",
+       "Cape of Good Hope: 15th century\n",
+       "Astrolabe: Ancient</span>\n",
+       "Reasoning:<span style='background-color: rgba(0, 165, 0, 0.25); opacity: 1.0; display: inline;' title='{{generate &quot;reasoning&quot;}}'> Vasco de Gama could have used an astrolabe to avoid shipwreck by the Cape of Good Hope.</span>\n",
+       "Anachronism:<span style='background-color: rgba(0, 165, 0, 0.25); opacity: 1.0; display: inline;' title='{{#select &quot;answer&quot;}} Yes{{or}} No{{/select}}'> No</span></pre>"
+      ],
+      "text/plain": [
+       "Given a sentence tell me whether it contains an anachronism (i.e. whether it could have happened or not based on the time periods associated with the entities).\n",
+       "----\n",
+       "Sentence: I wrote about shakespeare\n",
+       "Entities and dates:\n",
+       "I: present\n",
+       "Shakespeare: 16th century\n",
+       "Reasoning: I can write about Shakespeare because he lived in the past with respect to me.\n",
+       "Anachronism: No\n",
+       "\n",
+       "Sentence: Shakespeare wrote about me\n",
+       "Entities and dates:\n",
+       "Shakespeare: 16th century\n",
+       "I: present\n",
+       "Reasoning: Shakespeare cannot have written about me, because he died before I was born\n",
+       "Anachronism: Yes\n",
+       "---\n",
+       "Sentence: Vasco de Gama avoided shipwreck by the Cape of Good Hope thanks to his astrolabe.\n",
+       "Entities and dates:\n",
+       "Vasco de Gama: 15th century\n",
+       "Cape of Good Hope: 15th century\n",
+       "Astrolabe: Ancient\n",
+       "Reasoning: Vasco de Gama could have used an astrolabe to avoid shipwreck by the Cape of Good Hope.\n",
+       "Anachronism: No"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s"
+   ]
   }
  ],
  "metadata": {
