--- a/notebooks/chat_topk.ipynb
+++ b/notebooks/chat_topk.ipynb
@@ -12,6 +12,63 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import guidance\n",
+    "\n",
+    "guidance.llm = guidance.llms.OpenAI(\"gpt-4\", chat_completion=True)\n",
+    "\n",
+    "import re\n",
+    "def parse_best(prosandcons, options):\n",
+    "    best = int(re.findall(r'Best=(\\d+)', prosandcons)[0])\n",
+    "    return options[best]\n",
+    "\n",
+    "create_plan = guidance('''<|im_start|>system\n",
+    "You are a helpful assistant.\n",
+    "<|im_end|>\n",
+    "<|im_start|>user\n",
+    "I want to {{goal}}.\n",
+    "\n",
+    "{{~! generate potential options ~}}\n",
+    "{{#block hidden=True}}\n",
+    "Can you please generate one option for how to accomplish this?\n",
+    "Please make the option very short, at most one line.\n",
+    "<|im_end|>\n",
+    "<|im_start|>assistant\n",
+    "{{generate 'options' n=5 temperature=1.0 max_tokens=500}}\n",
+    "<|im_end|>\n",
+    "{{/block}}\n",
+    "\n",
+    "{{~! generate pros and cons and select the best option ~}}\n",
+    "{{#block hidden=True}}\n",
+    "Can you please comment on the pros and cons of each of the following options, and then pick the best option?\n",
+    "---{{#each options}}\n",
+    "Option {{@index}}: {{this}}{{/each}}\n",
+    "---\n",
+    "Please discuss each option very briefly (one line for pros, one for cons), and end by saying Best=X, where X is the best option.\n",
+    "<|im_end|>\n",
+    "<|im_start|>assistant\n",
+    "{{generate 'prosandcons' temperature=0.0 max_tokens=500}}\n",
+    "<|im_end|>\n",
+    "{{/block}}\n",
+    "\n",
+    "{{~! Create a plan }}\n",
+    "Here is my plan:\n",
+    "{{parse_best prosandcons options}}\n",
+    "Please elaborate on this plan, and tell me how to best accomplish it.\n",
+    "<|im_end|>\n",
+    "<|im_start|>assistant\n",
+    "{{generate 'plan' max_tokens=500}}\n",
+    "<|im_end|>''')\n",
+    "\n",
+    "out = create_plan(goal='Make a lot of money', parse_best=parse_best)\n",
+    "out"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
