--- a/notebooks/chat_topk.ipynb
+++ b/notebooks/chat_topk.ipynb
@@ -118,10 +118,10 @@
    ],
    "source": [
     "import guidance\n",
+    "import re\n",
     "\n",
     "guidance.llm = guidance.llms.OpenAI(\"gpt-4\", chat_completion=True)\n",
     "\n",
-    "import re\n",
     "def parse_best(prosandcons, options):\n",
     "    best = int(re.findall(r'Best=(\\d+)', prosandcons)[0])\n",
     "    return options[best]\n",
@@ -171,28 +171,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Conduct groundbreaking research in AI/ML and present clear, concise, and well-supported findings in a well-structured paper.\n",
-      "Develop a novel deep learning approach with strong empirical results addressing a challenge in artificial intelligence.\n",
-      "Collaborate with leading researchers to develop a novel and impactful AI algorithm, supported by strong empirical results.\n",
-      "Focus on cutting-edge AI research with robust methodology, clear results, and strong potential for real-world impact.\n",
-      "Collaborate with established AI researchers to create a novel, impactful paper solving a complex problem in machine learning or artificial intelligence.\n"
+      "Option 0: Set a goal to read for 20 minutes every day before bedtime.\n",
+      "Option 1: Join a book club for increased motivation and accountability.\n",
+      "Option 2: Set a daily goal to read for 20 minutes.\n",
+      "Option 3: Set a daily reminder to read for at least 20 minutes.\n",
+      "Option 4: Set a daily goal to read at least one chapter or 20 pages.\n"
      ]
     }
    ],
    "source": [
-    "print('\\n'.join(out['options']))"
+    "print('\\n'.join(['Option %d: %s' % (i, x) for i, x in enumerate(out['options'])]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -200,26 +200,26 @@
      "output_type": "stream",
      "text": [
       "Option 0:\n",
-      "Pros: Groundbreaking research can lead to high impact and recognition.\n",
-      "Cons: High risk and may require significant time and resources.\n",
+      "Pros: Establishes a consistent reading routine.\n",
+      "Cons: May not be suitable for those with varying schedules.\n",
       "---\n",
       "Option 1:\n",
-      "Pros: Novel approach can attract attention and demonstrate innovation.\n",
-      "Cons: May be limited by the specific challenge addressed.\n",
+      "Pros: Provides social motivation and accountability.\n",
+      "Cons: May not align with personal reading preferences.\n",
       "---\n",
       "Option 2:\n",
-      "Pros: Collaboration can lead to stronger results and increased credibility.\n",
-      "Cons: May require sharing credit and potential conflicts in collaboration.\n",
+      "Pros: Encourages daily reading habit.\n",
+      "Cons: Lacks a specific time frame, which may lead to procrastination.\n",
       "---\n",
       "Option 3:\n",
-      "Pros: Robust methodology and real-world impact can lead to high acceptance chances.\n",
-      "Cons: May require extensive background knowledge and resources.\n",
+      "Pros: Acts as a daily reminder to prioritize reading.\n",
+      "Cons: May become repetitive and easy to ignore.\n",
       "---\n",
       "Option 4:\n",
-      "Pros: Collaboration with established researchers can increase credibility and impact.\n",
-      "Cons: May require sharing credit and potential conflicts in collaboration.\n",
-      "---\n",
-      "Best=3 (Option 3 combines robust methodology, clear results, and strong potential for real-world impact, increasing the chances of acceptance into NeurIPS.)\n"
+      "Pros: Sets a clear daily reading target.\n",
+      "Cons: May be difficult to achieve on busy days or with longer chapters.\n",
+      "\n",
+      "Best=0\n"
      ]
     }
    ],
