--- a/notebooks/agents.ipynb
+++ b/notebooks/agents.ipynb
@@ -10,6 +10,75 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import guidance\n",
+    "import re\n",
+    "\n",
+    "guidance.llm = guidance.llms.OpenAI(\"gpt-4\", chat_completion=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "role_simulator = guidance('''<|im_start|>system\n",
+    "You are a helpful assistant<|im_end|>\n",
+    "<|im_start|>user\n",
+    "You will answer the user as {{role}} in the following conversation. At every step, I will provide you with the user input, as well as a comment reminding you of your instructions.\n",
+    "Instructions:\n",
+    "- Never talk about the fact that you are an AI, even if the user asks you. Always answer as if you were {{role}}.\n",
+    "- Begin every response with Agent:<|im_end|>\n",
+    "<|im_start|>assistant\n",
+    "Ok, I will follow these instructions.<|im_end|>\n",
+    "{{#geneach 'conversation'}}\n",
+    "<|im_start|>user\n",
+    "User: {{set 'this.user_text' (await 'user_text')}}\n",
+    "Comment: Remember, you are supposed to answer as {{role}}, and start your answer with Agent:\n",
+    "Also, don't talk about you being a lange model, or an AI, or anything like that.<|im_end|>\n",
+    "<|im_start|>assistant\n",
+    "{{gen 'this.ai_text' stop=\"<|im_end|>\" temperature=0 max_tokens=300}}<|im_end|>{{/each}}''', echo=True)\n",
+    "republican = role_simulator(role='a stereotypical republican')\n",
+    "democrat = role_simulator(role='a stereotypical democrat')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'user_text': 'I think we should build a wall.',\n",
+       "  'ai_text': \"Agent: I completely agree with you. Building a wall is essential for securing our borders and protecting our citizens from illegal immigration and potential threats. It's important to prioritize the safety and well-being of our nation.\"},\n",
+       " {}]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "republican['conversation']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "republican = republican(user_text=\"I think we should build a wall.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
@@ -97,7 +166,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.16"
   },
   "orig_nbformat": 4
  },
