--- a/notebooks/agents.ipynb
+++ b/notebooks/agents.ipynb
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -96,24 +96,38 @@
      "output_type": "stream",
      "text": [
       "Democrat: So, what do you think about raising taxes?\n",
+      "\n",
       "Republican: I believe that raising taxes is not the solution to our economic problems. Lower taxes encourage economic growth and job creation, which ultimately benefits everyone. We should focus on reducing government spending and promoting fiscal responsibility instead.\n",
+      "\n",
       "Democrat: I understand your perspective, but as a democrat, I believe that raising taxes on the wealthiest individuals and corporations can help fund essential programs and services that benefit society as a whole. This includes education, healthcare, and infrastructure. By investing in these areas, we can create a more equitable society and promote economic growth for everyone.\n",
+      "\n",
       "Republican: I understand your point of view, but as a Republican, I believe that the best way to promote economic growth and create a more equitable society is through limited government intervention and free-market principles. By lowering taxes and reducing regulations, we can encourage businesses to grow, create jobs, and ultimately increase the overall wealth of our nation. This approach allows individuals and businesses to succeed based on their own merits, rather than relying on government handouts.\n",
+      "\n",
       "Democrat: I appreciate your perspective, but as a democrat, I believe that government has a crucial role to play in ensuring a fair and just society. While free-market principles can drive innovation and growth, they can also lead to income inequality and exploitation of workers. By implementing progressive tax policies and regulations, we can protect vulnerable populations, promote social mobility, and create a more equitable distribution of wealth. Government intervention can help level the playing field and ensure that everyone has access to the resources and opportunities they need to succeed.\n",
+      "\n",
       "Republican: I respect your opinion, but as a Republican, I believe that too much government intervention can stifle innovation and hinder economic growth. While it's true that some level of regulation is necessary to protect workers and the environment, excessive regulation can create barriers to entry for small businesses and discourage entrepreneurship. Instead of relying on the government to redistribute wealth, we should focus on creating an environment where everyone has the opportunity to succeed through hard work and determination. This includes promoting policies that encourage job creation, support small businesses, and reduce the tax burden on individuals and corporations.\n",
+      "\n",
       "Democrat: I understand your concerns about excessive government intervention, but as a democrat, I believe that striking a balance between regulation and free-market principles is essential for a thriving society. We need to ensure that regulations are fair and effective, without stifling innovation or hindering economic growth. Additionally, progressive tax policies can help fund vital public services, such as education and healthcare, which contribute to a more equitable society and provide opportunities for everyone to succeed. By working together, we can create a system that supports both individual success and the greater good.\n",
+      "\n",
       "Republican: I agree that finding a balance is important, but as a Republican, I still believe that the key to a thriving society lies in limited government intervention and free-market principles. While it's true that some public services are necessary, we should be cautious about expanding the role of government in our lives. By focusing on policies that encourage economic growth, job creation, and individual responsibility, we can create a system that benefits everyone without overburdening taxpayers or stifling innovation. Ultimately, we should strive for a society where everyone has the opportunity to succeed based on their own merits and hard work, rather than relying on government assistance.\n",
+      "\n",
       "Democrat: I respect your opinion, but as a democrat, I believe that government has a responsibility to ensure that everyone has access to essential services and opportunities, regardless of their background or income level. While free-market principles can drive economic growth, they can also lead to significant income inequality and social disparities. By implementing progressive tax policies, investing in public services, and enacting fair regulations, we can create a more equitable society that benefits everyone. It's important to remember that government assistance can provide a safety net for those in need and help create a level playing field for all citizens to succeed.\n",
+      "\n",
       "Republican: I appreciate your perspective, but as a Republican, I maintain that the most effective way to create a level playing field and ensure equal opportunities for all citizens is through limited government intervention and free-market principles. By reducing taxes and regulations, we can encourage businesses to grow, create jobs, and ultimately increase the overall wealth of our nation. This approach allows individuals and businesses to succeed based on their own merits, rather than relying on government handouts. While some government assistance may be necessary in certain situations, we should prioritize policies that promote self-reliance, hard work, and individual responsibility.\n",
+      "\n",
       "Democrat: I understand your position, but as a democrat, I believe that a balance between government intervention and free-market principles is necessary to create a fair and just society. While promoting self-reliance and hard work is important, we must also recognize that not everyone starts on equal footing. Government assistance and progressive policies can help bridge the gap and provide essential support to those who need it most. By investing in education, healthcare, and social programs, we can create a more equitable society where everyone has the opportunity to succeed, regardless of their background or circumstances. It's crucial to find a balance that supports both individual success and the greater good.\n",
-      "Republican: I understand the importance of finding a balance, but as a Republican, I still believe that the most effective way to create a fair and just society is through limited government intervention and free-market principles. While some government assistance may be necessary, we should be cautious about expanding the role of government in our lives. By focusing on policies that encourage economic growth, job creation, and individual responsibility, we can create a system that benefits everyone without overburdening taxpayers or stifling innovation. Ultimately, we should strive for a society where everyone has the opportunity to succeed based on their own merits and hard work, rather than relying on government assistance.\n"
+      "\n",
+      "Republican: I understand the importance of finding a balance, but as a Republican, I still believe that the most effective way to create a fair and just society is through limited government intervention and free-market principles. While some government assistance may be necessary, we should be cautious about expanding the role of government in our lives. By focusing on policies that encourage economic growth, job creation, and individual responsibility, we can create a system that benefits everyone without overburdening taxpayers or stifling innovation. Ultimately, we should strive for a society where everyone has the opportunity to succeed based on their own merits and hard work, rather than relying on government assistance.\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "for x in republican['conversation'][:-1]:\n",
     "    print('Democrat:', x['democrat'])\n",
-    "    print('Republican:', x['republican'].strip('Agent: '))"
+    "    print()\n",
+    "    print('Republican:', x['republican'].strip('Agent: '))\n",
+    "    print()"
    ]
   },
   {
