Add pattern guide notebook

--- a/notebooks/guidance_acceleration.ipynb
+++ b/notebooks/guidance_acceleration.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "When multiple generation or LLM-directed control flow statements are used in a single Guidance program then we can significantly improve inference performance by maintaining a session state with the LLM inferencer and so reusing the Key/Value caches as we progress through the prompt. This is much faster than letting the model generate all of the structural tokens itself (for example if the structure was demonstrated using a one-shot example), and also faster that simply recalling the model without any state at each point in the Guidance program.\n",
     "\n",
-    "An early implementation of this is available in `guidance.llms.Transformers`, and is demonstrated below. Note we also show the performance impact of token healing (which has not yet been highly optimized)."
+    "We call this \"guidance acceleration\" and an early implementation of this is available in `guidance.llms.Transformers` as demonstrated below. Note we also show the performance impact of token healing (which has not yet been highly optimized)."
    ]
   },
   {
