--- a/notebooks/model_examples/llama.ipynb
+++ b/notebooks/model_examples/llama.ipynb
@@ -190,7 +190,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<hr style=\"height: 1px; opacity: 0.5; border: none; border-top: solid;\">\n",
+    "<hr style=\"height: 1px; opacity: 0.5; border: none; background: #cccccc;\">\n",
     "<div style=\"text-align: center; opacity: 0.5\">Have an idea for more helpful examples? Pull requests that add to this documentation notebook are encouraged!</div>"
    ]
   }
