Clean up notebooks

--- a/notebooks/guidance_acceleration.ipynb
+++ b/notebooks/guidance_acceleration.ipynb
@@ -89,11 +89,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<hr style=\"height: 1px; opacity: 0.5; border: none; background: #cccccc;\">\n",
+    "<div style=\"text-align: center; opacity: 0.5\">Have an idea for more helpful examples? Pull requests that add to this documentation notebook are encouraged!</div>"
+   ]
   }
  ],
  "metadata": {
