--- a/notebooks/anachronism.ipynb
+++ b/notebooks/anachronism.ipynb
@@ -165,6 +165,14 @@
     "print('Few-shot', (np.array(labels) == fews).mean())\n",
     "print('Structured output', (np.array(labels) == structs).mean())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<hr style=\"height: 1px; opacity: 0.5; border: none; background: #cccccc;\">\n",
+    "<div style=\"text-align: center; opacity: 0.5\">Have an idea for more helpful examples? Pull requests that add to this documentation notebook are encouraged!</div>"
+   ]
   }
  ],
  "metadata": {
