--- a/notebooks/pattern_guides.ipynb
+++ b/notebooks/pattern_guides.ipynb
@@ -118,6 +118,14 @@
     "    verse=14\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<hr style=\"height: 1px; opacity: 0.5; border: none; background: #cccccc;\">\n",
+    "<div style=\"text-align: center; opacity: 0.5\">Have an idea for more helpful examples? Pull requests that add to this documentation notebook are encouraged!</div>"
+   ]
   }
  ],
  "metadata": {
