--- a/notebooks/anachronism.ipynb
+++ b/notebooks/anachronism.ipynb
@@ -121,7 +121,7 @@
     "structure_prompt(\n",
     "    examples=examples,\n",
     "    input='The T-rex bit my dog',\n",
-    "    echo=True # incrementally display the output as it is generated\n",
+    "    display=True # incrementally display the output as it is generated\n",
     ")"
    ]
   },
