--- a/notebooks/proverb.ipynb
+++ b/notebooks/proverb.ipynb
@@ -59,7 +59,7 @@
     "    book=\"Proverbs\",\n",
     "    chapter=11,\n",
     "    verse=14,\n",
-    "    echo=True\n",
+    "    display=True\n",
     ")"
    ]
   },
