--- a/notebooks/art_of_prompt_design/use_clear_syntax.ipynb
+++ b/notebooks/art_of_prompt_design/use_clear_syntax.ipynb
@@ -7,12 +7,18 @@
    "source": [
     "# The Art of Prompt Design: Use clear syntax\n",
     "\n",
-    "In this post, we'll discuss how to use clear syntax in your prompt to make it easier for the LLM to understand your intent. This is part of a series on the art of prompt design that demonstrates how to use <a href=\"https://github.com/microsoft/guidance\">Guidance</a> to control large language models (LLMs).\n",
+    "This is the first installment of a series on how to use <a href=\"https://github.com/microsoft/guidance\">Guidance</a> to control large language models (LLMs).\n",
+    "We'll start from the basics and work our way up to more advanced topics.\n",
     "\n",
-    "Using lots of clear syntax for your prompt can enable you to better communicate intent to the LLM, and also ensure that outputs are easier to parse. For the sake of clarity and reproduceability we will start by using an open source StableLM model without fine tuning, then we will show how the same ideas apply to instruction-tuned models like GPT-3.5 and chat-tuned models like ChatGPT with GPT-4.\n",
-    "\n",
+    "In this post, we'll show that having **clear syntax** enables you to communicate your intent to the LLM, and also ensure that outputs are easy to parse. For the sake of clarity and reproducibility we'll start with an open source StableLM model without fine tuning. Then, we will show how the same ideas apply to instruction-tuned models like GPT-3.5 and chat-tuned models like ChatGPT / GPT-4."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Clear syntax helps with parsing the output\n",
-    "The first and most obvious benefit of using clear syntax is that it makes it easier to parse the output of the LLM. Even if the LLM is able to generate a correct output, it may be difficult to programatically extract the desired information from the output. For example, consider the following Guidance prompt (where `{{gen 'answer'}}` is a Guidance command to generate text from the LLM):"
+    "The first, and most obvious benefit of using clear syntax is that it makes it easier to parse the output of the LLM. Even if the LLM is able to generate a correct output, it may be difficult to programatically extract the desired information from the output. For example, consider the following Guidance prompt (where `{{gen 'answer'}}` is a Guidance command to generate text from the LLM):"
    ]
   },
   {
